// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Environment cell renderer ChannelEnvironmentCellRenderer can be created 1`] = `
<ChannelEnvironmentCellRenderer
  context={
    Object {
      "data": Object {
        "channelEnvironment": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelLag": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelMissing": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelTimeliness": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "id": "test",
        "needsAcknowledgement": false,
        "needsAttention": true,
        "stationData": Object {
          "stationCapabilityStatus": "GOOD",
          "stationName": "test",
          "stationStatus": "GOOD",
        },
        "stationEnvironment": 1,
        "stationGroups": Array [
          Object {
            "groupName": "Group",
            "sohStationCapability": "GOOD",
            "stationName": "test",
          },
        ],
        "stationLag": 2,
        "stationMissing": 3,
        "stationTimeliness": 4,
      },
    }
  }
  data={
    Object {
      "channelEnvironment": Object {
        "isContributing": true,
        "status": "GOOD",
        "value": 1,
      },
      "channelLag": Object {
        "isContributing": true,
        "status": "GOOD",
        "value": 1,
      },
      "channelMissing": Object {
        "isContributing": true,
        "status": "GOOD",
        "value": 1,
      },
      "channelTimeliness": Object {
        "isContributing": true,
        "status": "GOOD",
        "value": 1,
      },
      "id": "test",
      "needsAcknowledgement": false,
      "needsAttention": true,
      "stationData": Object {
        "stationCapabilityStatus": "GOOD",
        "stationName": "test",
        "stationStatus": "GOOD",
      },
      "stationEnvironment": 1,
      "stationGroups": Array [
        Object {
          "groupName": "Group",
          "sohStationCapability": "GOOD",
          "stationName": "test",
        },
      ],
      "stationLag": 2,
      "stationMissing": 3,
      "stationTimeliness": 4,
    }
  }
  formatValue={[MockFunction]}
  getValue={[MockFunction]}
  rowIndex={1}
  setValue={[MockFunction]}
  value={2.5}
  valueFormatted={3}
>
  <EnvironmentCellRenderer
    context={
      Object {
        "data": Object {
          "channelEnvironment": Object {
            "isContributing": true,
            "status": "GOOD",
            "value": 1,
          },
          "channelLag": Object {
            "isContributing": true,
            "status": "GOOD",
            "value": 1,
          },
          "channelMissing": Object {
            "isContributing": true,
            "status": "GOOD",
            "value": 1,
          },
          "channelTimeliness": Object {
            "isContributing": true,
            "status": "GOOD",
            "value": 1,
          },
          "id": "test",
          "needsAcknowledgement": false,
          "needsAttention": true,
          "stationData": Object {
            "stationCapabilityStatus": "GOOD",
            "stationName": "test",
            "stationStatus": "GOOD",
          },
          "stationEnvironment": 1,
          "stationGroups": Array [
            Object {
              "groupName": "Group",
              "sohStationCapability": "GOOD",
              "stationName": "test",
            },
          ],
          "stationLag": 2,
          "stationMissing": 3,
          "stationTimeliness": 4,
        },
      }
    }
    data={
      Object {
        "channelEnvironment": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelLag": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelMissing": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelTimeliness": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "id": "test",
        "needsAcknowledgement": false,
        "needsAttention": true,
        "stationData": Object {
          "stationCapabilityStatus": "GOOD",
          "stationName": "test",
          "stationStatus": "GOOD",
        },
        "stationEnvironment": 1,
        "stationGroups": Array [
          Object {
            "groupName": "Group",
            "sohStationCapability": "GOOD",
            "stationName": "test",
          },
        ],
        "stationLag": 2,
        "stationMissing": 3,
        "stationTimeliness": 4,
      }
    }
    formatValue={[MockFunction]}
    getValue={[MockFunction]}
    isStationCell={false}
    rowIndex={1}
    setValue={[MockFunction]}
    value={2.5}
    valueFormatted={3}
  >
    <StationStatisticsDragCell
      stationId="test"
    >
      <DragCell
        getSelectedStationIds={[Function]}
        getSingleDragImage={[Function]}
        setSelectedStationIds={[Function]}
        stationId="test"
      >
        <DragInitiator
          getDragImage={[Function]}
          getDragPayload={[Function]}
          onDragEnd={[Function]}
          onDragStart={[Function]}
        >
          <div
            draggable={true}
            onDragEnd={[Function]}
            onDragStart={[Function]}
          >
            <div
              data-cy="environment-cell"
              title=""
            >
              <SohRollupCell
                cellStatus="good"
                className="table-cell--numeric"
                context={
                  Object {
                    "data": Object {
                      "channelEnvironment": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "channelLag": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "channelMissing": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "channelTimeliness": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "id": "test",
                      "needsAcknowledgement": false,
                      "needsAttention": true,
                      "stationData": Object {
                        "stationCapabilityStatus": "GOOD",
                        "stationName": "test",
                        "stationStatus": "GOOD",
                      },
                      "stationEnvironment": 1,
                      "stationGroups": Array [
                        Object {
                          "groupName": "Group",
                          "sohStationCapability": "GOOD",
                          "stationName": "test",
                        },
                      ],
                      "stationLag": 2,
                      "stationMissing": 3,
                      "stationTimeliness": 4,
                    },
                  }
                }
                data={
                  Object {
                    "channelEnvironment": Object {
                      "isContributing": true,
                      "status": "GOOD",
                      "value": 1,
                    },
                    "channelLag": Object {
                      "isContributing": true,
                      "status": "GOOD",
                      "value": 1,
                    },
                    "channelMissing": Object {
                      "isContributing": true,
                      "status": "GOOD",
                      "value": 1,
                    },
                    "channelTimeliness": Object {
                      "isContributing": true,
                      "status": "GOOD",
                      "value": 1,
                    },
                    "id": "test",
                    "needsAcknowledgement": false,
                    "needsAttention": true,
                    "stationData": Object {
                      "stationCapabilityStatus": "GOOD",
                      "stationName": "test",
                      "stationStatus": "GOOD",
                    },
                    "stationEnvironment": 1,
                    "stationGroups": Array [
                      Object {
                        "groupName": "Group",
                        "sohStationCapability": "GOOD",
                        "stationName": "test",
                      },
                    ],
                    "stationLag": 2,
                    "stationMissing": 3,
                    "stationTimeliness": 4,
                  }
                }
                dataReceivedStatus="received"
                formatValue={[MockFunction]}
                getValue={[MockFunction]}
                isStationCell={false}
                rowIndex={1}
                setValue={[MockFunction]}
                stationId="test"
                value="1.00"
                valueFormatted={3}
              >
                <TableCellRenderer
                  cellStatus="good"
                  className="soh-cell table-cell--numeric"
                  context={
                    Object {
                      "data": Object {
                        "channelEnvironment": Object {
                          "isContributing": true,
                          "status": "GOOD",
                          "value": 1,
                        },
                        "channelLag": Object {
                          "isContributing": true,
                          "status": "GOOD",
                          "value": 1,
                        },
                        "channelMissing": Object {
                          "isContributing": true,
                          "status": "GOOD",
                          "value": 1,
                        },
                        "channelTimeliness": Object {
                          "isContributing": true,
                          "status": "GOOD",
                          "value": 1,
                        },
                        "id": "test",
                        "needsAcknowledgement": false,
                        "needsAttention": true,
                        "stationData": Object {
                          "stationCapabilityStatus": "GOOD",
                          "stationName": "test",
                          "stationStatus": "GOOD",
                        },
                        "stationEnvironment": 1,
                        "stationGroups": Array [
                          Object {
                            "groupName": "Group",
                            "sohStationCapability": "GOOD",
                            "stationName": "test",
                          },
                        ],
                        "stationLag": 2,
                        "stationMissing": 3,
                        "stationTimeliness": 4,
                      },
                    }
                  }
                  data={
                    Object {
                      "channelEnvironment": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "channelLag": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "channelMissing": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "channelTimeliness": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "id": "test",
                      "needsAcknowledgement": false,
                      "needsAttention": true,
                      "stationData": Object {
                        "stationCapabilityStatus": "GOOD",
                        "stationName": "test",
                        "stationStatus": "GOOD",
                      },
                      "stationEnvironment": 1,
                      "stationGroups": Array [
                        Object {
                          "groupName": "Group",
                          "sohStationCapability": "GOOD",
                          "stationName": "test",
                        },
                      ],
                      "stationLag": 2,
                      "stationMissing": 3,
                      "stationTimeliness": 4,
                    }
                  }
                  data-cell-status="good"
                  data-received-status="received"
                  data-station-id="test"
                  dataReceivedStatus="received"
                  formatValue={[MockFunction]}
                  getValue={[MockFunction]}
                  isStationCell={false}
                  rowIndex={1}
                  setValue={[MockFunction]}
                  stationId="test"
                  value="1.00"
                  valueFormatted={3}
                >
                  <div
                    className="table-cell soh-cell table-cell--numeric"
                    data-cell-status="good"
                    data-cy="table-cell"
                    data-received-status="received"
                    data-station-id="test"
                    style={
                      Object {
                        "height": "36px",
                        "overflow": "hidden",
                      }
                    }
                    title="1.00"
                  >
                    <div
                      className=" table-cell__value"
                      data-cy="table-cell__value"
                    >
                      <span>
                        1.00
                      </span>
                    </div>
                    <PercentBar
                      percentage={1}
                    >
                      <div
                        className="percent-bar"
                        key="1"
                        style={
                          Object {
                            "transform": "translateX(-99%)",
                            "width": "100%",
                          }
                        }
                      />
                    </PercentBar>
                  </div>
                </TableCellRenderer>
              </SohRollupCell>
            </div>
          </div>
        </DragInitiator>
      </DragCell>
    </StationStatisticsDragCell>
  </EnvironmentCellRenderer>
</ChannelEnvironmentCellRenderer>
`;

exports[`Environment cell renderer StationEnvironmentCellRenderer can be created 1`] = `
<StationEnvironmentCellRenderer
  context={
    Object {
      "data": Object {
        "channelEnvironment": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelLag": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelMissing": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelTimeliness": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "id": "test",
        "needsAcknowledgement": false,
        "needsAttention": true,
        "stationData": Object {
          "stationCapabilityStatus": "GOOD",
          "stationName": "test",
          "stationStatus": "GOOD",
        },
        "stationEnvironment": 1,
        "stationGroups": Array [
          Object {
            "groupName": "Group",
            "sohStationCapability": "GOOD",
            "stationName": "test",
          },
        ],
        "stationLag": 2,
        "stationMissing": 3,
        "stationTimeliness": 4,
      },
    }
  }
  data={
    Object {
      "channelEnvironment": Object {
        "isContributing": true,
        "status": "GOOD",
        "value": 1,
      },
      "channelLag": Object {
        "isContributing": true,
        "status": "GOOD",
        "value": 1,
      },
      "channelMissing": Object {
        "isContributing": true,
        "status": "GOOD",
        "value": 1,
      },
      "channelTimeliness": Object {
        "isContributing": true,
        "status": "GOOD",
        "value": 1,
      },
      "id": "test",
      "needsAcknowledgement": false,
      "needsAttention": true,
      "stationData": Object {
        "stationCapabilityStatus": "GOOD",
        "stationName": "test",
        "stationStatus": "GOOD",
      },
      "stationEnvironment": 1,
      "stationGroups": Array [
        Object {
          "groupName": "Group",
          "sohStationCapability": "GOOD",
          "stationName": "test",
        },
      ],
      "stationLag": 2,
      "stationMissing": 3,
      "stationTimeliness": 4,
    }
  }
  formatValue={[MockFunction]}
  getValue={[MockFunction]}
  rowIndex={1}
  setValue={[MockFunction]}
  value={2.5}
  valueFormatted={3}
>
  <EnvironmentCellRenderer
    context={
      Object {
        "data": Object {
          "channelEnvironment": Object {
            "isContributing": true,
            "status": "GOOD",
            "value": 1,
          },
          "channelLag": Object {
            "isContributing": true,
            "status": "GOOD",
            "value": 1,
          },
          "channelMissing": Object {
            "isContributing": true,
            "status": "GOOD",
            "value": 1,
          },
          "channelTimeliness": Object {
            "isContributing": true,
            "status": "GOOD",
            "value": 1,
          },
          "id": "test",
          "needsAcknowledgement": false,
          "needsAttention": true,
          "stationData": Object {
            "stationCapabilityStatus": "GOOD",
            "stationName": "test",
            "stationStatus": "GOOD",
          },
          "stationEnvironment": 1,
          "stationGroups": Array [
            Object {
              "groupName": "Group",
              "sohStationCapability": "GOOD",
              "stationName": "test",
            },
          ],
          "stationLag": 2,
          "stationMissing": 3,
          "stationTimeliness": 4,
        },
      }
    }
    data={
      Object {
        "channelEnvironment": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelLag": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelMissing": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelTimeliness": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "id": "test",
        "needsAcknowledgement": false,
        "needsAttention": true,
        "stationData": Object {
          "stationCapabilityStatus": "GOOD",
          "stationName": "test",
          "stationStatus": "GOOD",
        },
        "stationEnvironment": 1,
        "stationGroups": Array [
          Object {
            "groupName": "Group",
            "sohStationCapability": "GOOD",
            "stationName": "test",
          },
        ],
        "stationLag": 2,
        "stationMissing": 3,
        "stationTimeliness": 4,
      }
    }
    formatValue={[MockFunction]}
    getValue={[MockFunction]}
    isStationCell={true}
    rowIndex={1}
    setValue={[MockFunction]}
    value={2.5}
    valueFormatted={3}
  >
    <StationStatisticsDragCell
      stationId="test"
    >
      <DragCell
        getSelectedStationIds={[Function]}
        getSingleDragImage={[Function]}
        setSelectedStationIds={[Function]}
        stationId="test"
      >
        <DragInitiator
          getDragImage={[Function]}
          getDragPayload={[Function]}
          onDragEnd={[Function]}
          onDragStart={[Function]}
        >
          <div
            draggable={true}
            onDragEnd={[Function]}
            onDragStart={[Function]}
          >
            <div
              data-cy="environment-cell"
              title="1"
            >
              <SohRollupCell
                cellStatus="non-contributing"
                className="table-cell--numeric"
                context={
                  Object {
                    "data": Object {
                      "channelEnvironment": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "channelLag": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "channelMissing": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "channelTimeliness": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "id": "test",
                      "needsAcknowledgement": false,
                      "needsAttention": true,
                      "stationData": Object {
                        "stationCapabilityStatus": "GOOD",
                        "stationName": "test",
                        "stationStatus": "GOOD",
                      },
                      "stationEnvironment": 1,
                      "stationGroups": Array [
                        Object {
                          "groupName": "Group",
                          "sohStationCapability": "GOOD",
                          "stationName": "test",
                        },
                      ],
                      "stationLag": 2,
                      "stationMissing": 3,
                      "stationTimeliness": 4,
                    },
                  }
                }
                data={
                  Object {
                    "channelEnvironment": Object {
                      "isContributing": true,
                      "status": "GOOD",
                      "value": 1,
                    },
                    "channelLag": Object {
                      "isContributing": true,
                      "status": "GOOD",
                      "value": 1,
                    },
                    "channelMissing": Object {
                      "isContributing": true,
                      "status": "GOOD",
                      "value": 1,
                    },
                    "channelTimeliness": Object {
                      "isContributing": true,
                      "status": "GOOD",
                      "value": 1,
                    },
                    "id": "test",
                    "needsAcknowledgement": false,
                    "needsAttention": true,
                    "stationData": Object {
                      "stationCapabilityStatus": "GOOD",
                      "stationName": "test",
                      "stationStatus": "GOOD",
                    },
                    "stationEnvironment": 1,
                    "stationGroups": Array [
                      Object {
                        "groupName": "Group",
                        "sohStationCapability": "GOOD",
                        "stationName": "test",
                      },
                    ],
                    "stationLag": 2,
                    "stationMissing": 3,
                    "stationTimeliness": 4,
                  }
                }
                dataReceivedStatus="received"
                formatValue={[MockFunction]}
                getValue={[MockFunction]}
                isStationCell={true}
                rowIndex={1}
                setValue={[MockFunction]}
                stationId="test"
                value="1.00"
                valueFormatted={3}
              >
                <TableCellRenderer
                  cellStatus="non-contributing"
                  className="soh-cell table-cell--numeric"
                  context={
                    Object {
                      "data": Object {
                        "channelEnvironment": Object {
                          "isContributing": true,
                          "status": "GOOD",
                          "value": 1,
                        },
                        "channelLag": Object {
                          "isContributing": true,
                          "status": "GOOD",
                          "value": 1,
                        },
                        "channelMissing": Object {
                          "isContributing": true,
                          "status": "GOOD",
                          "value": 1,
                        },
                        "channelTimeliness": Object {
                          "isContributing": true,
                          "status": "GOOD",
                          "value": 1,
                        },
                        "id": "test",
                        "needsAcknowledgement": false,
                        "needsAttention": true,
                        "stationData": Object {
                          "stationCapabilityStatus": "GOOD",
                          "stationName": "test",
                          "stationStatus": "GOOD",
                        },
                        "stationEnvironment": 1,
                        "stationGroups": Array [
                          Object {
                            "groupName": "Group",
                            "sohStationCapability": "GOOD",
                            "stationName": "test",
                          },
                        ],
                        "stationLag": 2,
                        "stationMissing": 3,
                        "stationTimeliness": 4,
                      },
                    }
                  }
                  data={
                    Object {
                      "channelEnvironment": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "channelLag": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "channelMissing": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "channelTimeliness": Object {
                        "isContributing": true,
                        "status": "GOOD",
                        "value": 1,
                      },
                      "id": "test",
                      "needsAcknowledgement": false,
                      "needsAttention": true,
                      "stationData": Object {
                        "stationCapabilityStatus": "GOOD",
                        "stationName": "test",
                        "stationStatus": "GOOD",
                      },
                      "stationEnvironment": 1,
                      "stationGroups": Array [
                        Object {
                          "groupName": "Group",
                          "sohStationCapability": "GOOD",
                          "stationName": "test",
                        },
                      ],
                      "stationLag": 2,
                      "stationMissing": 3,
                      "stationTimeliness": 4,
                    }
                  }
                  data-cell-status="non-contributing"
                  data-received-status="received"
                  data-station-id="test"
                  dataReceivedStatus="received"
                  formatValue={[MockFunction]}
                  getValue={[MockFunction]}
                  isStationCell={true}
                  rowIndex={1}
                  setValue={[MockFunction]}
                  stationId="test"
                  value="1.00"
                  valueFormatted={3}
                >
                  <div
                    className="table-cell soh-cell table-cell--numeric"
                    data-cell-status="non-contributing"
                    data-cy="table-cell"
                    data-received-status="received"
                    data-station-id="test"
                    style={
                      Object {
                        "height": "36px",
                        "overflow": "hidden",
                      }
                    }
                    title="1.00"
                  >
                    <div
                      className=" table-cell__value"
                      data-cy="table-cell__value"
                    >
                      <span>
                        1.00
                      </span>
                    </div>
                    <PercentBar
                      percentage={1}
                    >
                      <div
                        className="percent-bar"
                        key="2"
                        style={
                          Object {
                            "transform": "translateX(-99%)",
                            "width": "100%",
                          }
                        }
                      />
                    </PercentBar>
                  </div>
                </TableCellRenderer>
              </SohRollupCell>
            </div>
          </div>
        </DragInitiator>
      </DragCell>
    </StationStatisticsDragCell>
  </EnvironmentCellRenderer>
</StationEnvironmentCellRenderer>
`;

exports[`Environment cell renderer can be created handle no data 1`] = `
<StationEnvironmentCellRenderer
  context={
    Object {
      "data": Object {
        "channelEnvironment": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelLag": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelMissing": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelTimeliness": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "id": "test",
        "needsAcknowledgement": false,
        "needsAttention": true,
        "stationData": Object {
          "stationCapabilityStatus": "GOOD",
          "stationName": "test",
          "stationStatus": "GOOD",
        },
        "stationEnvironment": 1,
        "stationGroups": Array [
          Object {
            "groupName": "Group",
            "sohStationCapability": "GOOD",
            "stationName": "test",
          },
        ],
        "stationLag": 2,
        "stationMissing": 3,
        "stationTimeliness": 4,
      },
    }
  }
  data={
    Object {
      "channelEnvironment": Object {
        "isContributing": true,
        "status": "GOOD",
        "value": 1,
      },
      "channelLag": Object {
        "isContributing": true,
        "status": "GOOD",
        "value": 1,
      },
      "channelMissing": Object {
        "isContributing": true,
        "status": "GOOD",
        "value": 1,
      },
      "channelTimeliness": Object {
        "isContributing": true,
        "status": "GOOD",
        "value": 1,
      },
      "id": "test",
      "needsAcknowledgement": false,
      "needsAttention": true,
      "stationData": Object {
        "stationCapabilityStatus": "GOOD",
        "stationName": "test",
        "stationStatus": "GOOD",
      },
      "stationEnvironment": 1,
      "stationGroups": Array [
        Object {
          "groupName": "Group",
          "sohStationCapability": "GOOD",
          "stationName": "test",
        },
      ],
      "stationLag": 2,
      "stationMissing": 3,
      "stationTimeliness": 4,
    }
  }
  formatValue={[MockFunction]}
  getValue={[MockFunction]}
  rowIndex={1}
  setValue={[MockFunction]}
  value={2.5}
  valueFormatted={3}
>
  <EnvironmentCellRenderer
    context={
      Object {
        "data": Object {
          "channelEnvironment": Object {
            "isContributing": true,
            "status": "GOOD",
            "value": 1,
          },
          "channelLag": Object {
            "isContributing": true,
            "status": "GOOD",
            "value": 1,
          },
          "channelMissing": Object {
            "isContributing": true,
            "status": "GOOD",
            "value": 1,
          },
          "channelTimeliness": Object {
            "isContributing": true,
            "status": "GOOD",
            "value": 1,
          },
          "id": "test",
          "needsAcknowledgement": false,
          "needsAttention": true,
          "stationData": Object {
            "stationCapabilityStatus": "GOOD",
            "stationName": "test",
            "stationStatus": "GOOD",
          },
          "stationEnvironment": 1,
          "stationGroups": Array [
            Object {
              "groupName": "Group",
              "sohStationCapability": "GOOD",
              "stationName": "test",
            },
          ],
          "stationLag": 2,
          "stationMissing": 3,
          "stationTimeliness": 4,
        },
      }
    }
    data={
      Object {
        "channelEnvironment": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelLag": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelMissing": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "channelTimeliness": Object {
          "isContributing": true,
          "status": "GOOD",
          "value": 1,
        },
        "id": "test",
        "needsAcknowledgement": false,
        "needsAttention": true,
        "stationData": Object {
          "stationCapabilityStatus": "GOOD",
          "stationName": "test",
          "stationStatus": "GOOD",
        },
        "stationEnvironment": 1,
        "stationGroups": Array [
          Object {
            "groupName": "Group",
            "sohStationCapability": "GOOD",
            "stationName": "test",
          },
        ],
        "stationLag": 2,
        "stationMissing": 3,
        "stationTimeliness": 4,
      }
    }
    formatValue={[MockFunction]}
    getValue={[MockFunction]}
    isStationCell={true}
    rowIndex={1}
    setValue={[MockFunction]}
    value={2.5}
    valueFormatted={3}
  />
</StationEnvironmentCellRenderer>
`;
